--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
-    <link rel="stylesheet" href="style.css">
     <script src="./carousel.js" defer></script>
 </head>
 <body>
@@ -14,9 +13,7 @@
 
         <div class="tri-carousel-larrow carousel-arrow"></div>
 
-        <div class="tri-carousel-center">
-
-        </div>
+        <div class="tri-carousel-center"></div>
 
         <div class="tri-carousel-rarrow carousel-arrow"></div>
 
