--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
     <script src="./carousel.js" defer></script>
+    <style>
+        *{
+            margin:0;
+        }
+        .positioner{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            top:0;
+            left:0;
+            margin-top: 100px;
+        }
+    </style>
 </head>
 <body>
 <div class="positioner">
