--- a/index.html
+++ b/index.html
@@ -23,15 +23,7 @@
 </head>
 <body>
 <div class="positioner">
-    <div class="tri-carousel-container">
-
-        <div class="tri-carousel-larrow carousel-arrow"></div>
-
-        <div class="tri-carousel-center"></div>
-
-        <div class="tri-carousel-rarrow carousel-arrow"></div>
-
-    </div>
+    <div id="triCarousel"></div>
 </div>
 </body>
 </html>
